testsuites/LLT/compiler/Diagnose/lex_test/lex_unterminated_char_literal/case4.expect.out
error: unterminated single-line string
  ==> case4.cj:14:13:
   | 
14 |     "cangjie ${'cdsdgd}"
   |              ~~^^^^^^^^^^ unterminated single-line string
   |              |
   |              because this interpolation is not terminated with a '}'
   | 
   # note: consider using multi-line string if you intended to include '\n' in string

1 error generated, 1 error printed.
